# AIC25_Track_01

./: .gitignore  README.md  pyproject.toml  run_inference_series.sh  setup.sh
setup/: pose_env.yml  setup_aic25_track1.sh  setup_kpr.sh  setup_mmpose.sh  setup_tracking.sh
src/mtmc/: configuration.py
src/mtmc/core/data/: class_label.py
src/mtmc/core/enhance/: normalize.py
src/mtmc/core/factory/: builder.py  factory.py  registry.py
src/mtmc/core/io/: file.py  filedir.py  frame.py  image.py  picklewrap.py  video.py
src/mtmc/core/objects/: units.py
src/mtmc/core/utils/: bbox.py  combine.py  device.py  draw.py  helper.py  image.py  (+4 more)
src/mtmc/utils/: config.py  distance.py
ultilities/: change_calibration_file_information.py  configuration.py  crop_bbox_yolo.py  mapping_3d.py  prepare_dataset_detection.py
ultilities/bev_map_cam/bev_map_cam_extend/: map_in_Warehouse_017.json  map_in_Warehouse_018-enhance.json  map_in_Warehouse_018.json  map_in_Warehouse_019.json  map_in_Warehouse_020.json
ultilities/bev_map_cam/bev_map_cam_strict/: map_in_Warehouse_017.json  map_in_Warehouse_019.json  map_in_Warehouse_020.json
ultilities/pose_reid_preprocess/: configuration.py  run_pose.py  ultils.py
ultilities/pose_reid_preprocess/keypoint_promptable_reidentification/: run_kpr_aicity25.py
ultilities/tracking/: configuration.py  mv_tracking.py  mv_tracking_prepare.py  pita_utils.py  run_tracking_guide.txt  sv_tracking.py
ultilities/tracking/botsort/: basetrack.py  bot_sort.py  kalman_filter.py  matching.py
ultilities/tracking/mv_tracking_lib/: multiview_tracking.py
